--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -5,7 +5,9 @@
   class="
     prose
     prose-h1:font-bold prose-h1:text-xl
-    prose-a:text-blue-600
+    prose-h2:text-3xl md:prose-h2:text-5xl
+    prose-h3:text-2xl md:prose-h3:text-4xl
+    prose-a:text-red-600 prose-a:font-bold
     prose-img:rounded-xl">
   <slot />
 </div>
