--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,8 @@
 import '../styles/global.css';
 import '@fontsource/ga-maamli';
 import gaMaamliWoff2 from '@fontsource/ga-maamli/files/ga-maamli-latin-400-normal.woff2?url';
+import workletUrl from 'houdini-powdered-gradient/worklet.js?url';
+import HoudiniWorklet from './HoudiniWorklet.astro';
 
 interface Props {
 	title: string;
@@ -44,3 +46,6 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Houdini -->
+<HoudiniWorklet workletUrl={workletUrl} />
