--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,16 +10,11 @@ const subpath = pathname.match(/[^\/]+/g);
 const isActive = href === pathname || href === '/' + subpath?.[0];
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a href={href} class:list={['font-fancy inline-block', className, { active: isActive }]} {...props}>
 	<slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
 	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
+		@apply underline
 	}
 </style>
