--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -8,6 +8,7 @@
     prose-h2:text-3xl md:prose-h2:text-5xl
     prose-h3:text-2xl md:prose-h3:text-4xl
     prose-a:text-red-600 prose-a:font-bold
-    prose-img:rounded-xl">
+    prose-img:rounded-xl
+    text-pretty">
   <slot />
 </div>
