--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,47 +6,23 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-neutral-900 text-white">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="min-h-screen">
-	   <div class="border-2 m-4 border-current">
-		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
+	<body>
+	    <div class="border-4 m-4 border-white">
+    		<Header />
+    		<main class="px-8 py-16 grid gap-16">
+    		    <div class="text-center">
+    		        <h1 class="text-[min(12vw+3rem)] leading-[min(10vw+3rem)]">Michele <span class="ml-[max(10vw+1rem)]">Memoli</span></h1>
+    			</div>
+    			<div class="mx-auto max-w-3xl grid gap-2">
+    			    <p class="text-3xl font-bold tracking-tighter text-balance">Founder, UX Leader, Software Engineer</p>
+    				<p>I exchange people’s attention for value.</p>
+    			</div>
+    		</main>
+    		<Footer />
 		</div>
 	</body>
 </html>
