--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
     		        <h1 class="text-[min(12vw+3rem)] leading-[min(10vw+3rem)]">Michele <span class="ml-[max(10vw+1rem)]">Memoli</span></h1>
     			</div>
     			<div class="mx-auto max-w-3xl grid gap-2">
-    			    <p class="text-3xl font-bold tracking-tighter text-balance">Founder, UX Leader, Software Engineer</p>
-    				<p>I exchange people’s attention for value.</p>
+    			    <p class="text-3xl font-bold tracking-tighter text-balance">Founder, UX Leader, Creative Technologist</p>
+    				<p>I talk Code, UX &amp; Founder-life.</p>
     			</div>
     		</main>
     		<Footer />
