--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -19,7 +19,7 @@ const { title, lead, description } = Astro.props;
 	<body>
 	    <div class="border-4 m-4 border-black">
 	        <Header />
-		<main class="px-8 py-16 grid gap-16">
+		<main class="px-8 py-16 grid grid-cols-1 gap-16">
 		    <Banner heading={title} lead={lead} />
 
 			<article class="p-8 md:p-12">
