--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	<body>
 	    <div class="border-4 m-4 border-white">
     		<Header />
-    		<main class="px-8 py-16 grid gap-16">
+    		<main class="px-8 py-16 grid grid-cols-1 gap-16">
     		    <div class="text-center">
     		        <h1 class="text-[min(12vw+3rem)] leading-[min(10vw+3rem)]">Michele <span class="ml-[max(10vw+1rem)]">Memoli</span></h1>
     			</div>
